changed the file location, started using babel and have a rendered html page. Furthermore, a test page is running

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "scripts": {
     "start": "npm run build",
-    "build": "webpack -d && cp client/src/index.html client/dist/index.html && webpack-dev-server --content-base client/src --inline --hot",
+    "build": "webpack -d && cp client/index.html && webpack-dev-server --content-base client/src --inline --hot",
     "build-prod": "webpack -p && cp client/src/index.html client/dist/index.html"
   },
   "dependencies": {
