--- a/package.json
+++ b/package.json
@@ -6,29 +6,23 @@
   "repository": "https://github.com/andrewregal/hrsf52-greenfield",
   "license": "ISC",
   "scripts": {
-    "start:dev": "nodemon ./bin/www",
-    "start": "npm run build",
-    "build-prod": "webpack -p && cp client/src/index.html client/dist/index.html"
+    "start": "nodemon server/server.js",
+    "dev-react": "webpack -d --watch"
   },
   "dependencies": {
-    "babel": "*",
     "bluebird": "*",
     "body-parser": "*",
     "bootstrap": "*",
-    "connect-pg-simple": "*",
     "express": "*",
     "express-session": "*",
     "jade": "*",
     "jquery": "*",
     "morgan": "*",
-    "pg": "^6.1.2",
-    "pg-hstore": "^2.3.2",
-    "pg-query": "*",
+    "mysql": "^2.13.0",
     "react": "*",
     "react-bootstrap": "*",
     "react-dom": "*",
     "react-router": "*",
-    "redis": "*",
     "request": "*",
     "request-promise": "*",
     "sequelize": "^3.30.0",
