--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "*",
     "morgan": "*",
     "mysql": "^2.13.0",
+    "node-fetch": "^1.6.3",
     "react": "*",
     "react-bootstrap": "*",
     "react-dom": "*",
