changed package.json and webpack to adapt to redux

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "babel": "^6.5.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bluebird": "*",
     "body-parser": "*",
     "bootstrap": "*",
@@ -24,7 +25,12 @@
     "react": "*",
     "react-bootstrap": "*",
     "react-dom": "*",
+    "react-redux": "^5.0.2",
     "react-router": "*",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.8.0",
+    "redux-promise-middleware": "^4.2.0",
+    "redux-thunk": "^2.2.0",
     "request": "*",
     "request-promise": "*",
     "sequelize": "^3.30.0",
@@ -35,6 +41,7 @@
     "babel-core": "*",
     "babel-eslint": "*",
     "babel-loader": "*",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
     "babel-preset-stage-2": "*",
