--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev-react": "webpack -d --watch"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel": "^6.5.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bluebird": "*",
@@ -26,7 +27,7 @@
     "react-bootstrap": "*",
     "react-dom": "*",
     "react-redux": "^5.0.2",
-    "react-router": "*",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.0",
     "redux-promise-middleware": "^4.2.0",
