--- a/package.json
+++ b/package.json
@@ -10,23 +10,31 @@
     "dev-react": "webpack -d --watch"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel": "^6.5.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "bcrypt": "^1.0.2",
     "bluebird": "*",
     "body-parser": "*",
+    "bookshelf": "^0.10.3",
     "bootstrap": "*",
+    "classnames": "^2.2.5",
     "express": "*",
     "express-session": "*",
     "jade": "*",
     "jquery": "*",
+    "jsonwebtoken": "^7.2.1",
+    "knex": "^0.12.6",
+    "lodash": "^4.17.4",
     "morgan": "*",
     "mysql": "^2.13.0",
     "node-fetch": "^1.6.3",
+    "pg": "^6.1.2",
     "react": "*",
     "react-bootstrap": "*",
     "react-dom": "*",
     "react-redux": "^5.0.2",
-    "react-router": "*",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.0",
     "redux-promise-middleware": "^4.2.0",
@@ -34,6 +42,8 @@
     "request": "*",
     "request-promise": "*",
     "sequelize": "^3.30.0",
+    "shortid": "^2.2.6",
+    "validator": "^6.2.1",
     "yelp": "*"
   },
   "devDependencies": {
